# Online-Boutique-with-AI

./: .env  .gitignore  README-AI-Integration.md  README.md  docker-compose.ai-boutique.yml  docker-compose.boutique-ai.yml  docker-compose.simple-test.yml  start-ai-boutique.bat  start-ai-boutique.sh  start-frontend-test.py  test-frontend.html  test-integration-simple.py  test-integration.py
.kiro/specs/ai-powered-boutique-agents/: design.md  html tags  requirements.md  tasks.md
ai-agents/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.simple  Makefile  README.md  docker-compose.demo.yml  docker-compose.simple.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  test_ml_models_standalone.py  tsconfig.json
ai-agents/.github/workflows/: ci-cd.yml
ai-agents/ai_agents/: __init__.py  cli.py
ai-agents/ai_agents/a2a/: __init__.py  communication.py  discovery.py  gateway.py  protocol.py
ai-agents/ai_agents/agents/: __init__.py  advanced_recommendation.py  ai_chatbot.py  dynamic_pricing.py  marketing_email.py  personal_stylist.py  review_tracker.py  virtual_tryon.py
ai-agents/ai_agents/core/: adk.py  config.py  logging.py
ai-agents/ai_agents/dev/: server.py
ai-agents/ai_agents/frontend/: __init__.py  agent_sdk.py  api_gateway.py
ai-agents/ai_agents/mcp_servers/: __init__.py  analytics.py  base.py  boutique_api.py  ml_models.py
ai-agents/infrastructure/: gke-cluster.yaml  kubectl-ai-config.yaml
ai-agents/scripts/: build.bat  clean.bat  demo-review-tracker.bat  demo_advanced_recommendation.py  demo_ai_chatbot.py  demo_all_agents.py  demo_dynamic_pricing.py  demo_marketing_email.py  demo_review_tracker.py  demo_virtual_tryon.py  dev.bat  help.bat  logs.bat  run-chatbot-demo.bat  run-email-demo.bat  run-interactive-demo.bat  run-pricing-demo.bat  run-recommendation-demo.bat  run-review-tracker-demo.bat  run-virtual-tryon-demo.bat  setup-dev-env.sh  setup-gemini-cli.js  setup-kubectl-ai.js  start-mcp.bat  stop.bat  test-a2a-simple.py  test-a2a.bat  test-analytics-simple.py  test-analytics.bat  test-communication-simple.py  test-communication.bat  test-mcp-simple.py  test-mcp.bat  test-ml-models-simple.py  test-ml-models.bat  test_virtual_tryon_simple.py
ai-agents/tests/: __init__.py  test_boutique_api_mcp.py  test_review_tracker.py
